[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdlm-skill"
version = "0.2.0"
description = "Conflict-Driven Learning Method — a framework-agnostic agent skill for long-horizon reasoning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Brian Li" }]
keywords = ["reasoning", "cdcl", "conflict-driven", "agent", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/BrianLi009/CDLM-skill"
Repository = "https://github.com/BrianLi009/CDLM-skill"

[tool.setuptools]
packages = ["cdlm"]
